# advent-of-code

./: .gitignore  .gitlab-ci.yml  README.md
2021/Nyk/: Advent-Of-Code.csproj  Advent-Of-Code.sln  Amrik's Suggestions.txt  Program.cs
2022/Amrik/: pom.xml
2022/Jordan/: README.md
2022/Nyk/: .gitignore  justfile  pyproject.toml  pytest.ini
2022/Nyk/day01/: README.md  calories.py  part_1.py  part_2.py
2022/Nyk/day02/: README.md  part_1.py  part_2.py  rps.py
2022/Nyk/day03/: README.md  part_1.py  part_2.py
2022/Nyk/day04/: README.md  elf_sections.py  part_1.py  part_2.py
2022/Nyk/day05/: README.md  part_1.py  part_2.py  stacks.py
2022/Nyk/day06/: README.md  input.txt  part_1.py  part_2.py
2022/Nyk/day07/: README.md  directories.py  part_1.py  part_2.py
2022/Nyk/tests/day01/: test_day01.py
2022/Nyk/tests/day02/: test_day02.py
2022/Nyk/tests/day03/: test_day03.py
2022/Nyk/tests/day04/: test_day04.py
2022/Nyk/tests/day05/: test_day05.py
2022/Nyk/tests/day06/: test_day06.py
2022/Nyk/tests/day07/: test_day07.py
2022/Nyk/tests/unit_tests/: test.py
2022/Nyk/utils/: __init__.py  read_file.py  run_solver.py
2022/Nyk/utils/generate/: generate_day.py
2022/Nyk/utils/generate/template/solutions/: README.md  part_1.py  part_2.py
2022/Nyk/utils/generate/template/tests/: test_dayxx.py
2023/: .eslintrc.json  README.md  bun.lockb  package-lock.json  package.json  tsconfig.json
2023/Nyk/: README.md
2023/dayTemplate/: index.ts  index.ts.tpl
2023/src/: types.ts
2024/: benchmarks_test.go  main.go
2024/amrik/: day01.go  day01_test.go  day02.go  (+2 more)
(+131 files in other folders)
