[tool.poetry]
name = "advent-of-code-2022"
version = "0.1.0"
description = "Advent of Code 2022"
authors = ["Nimolas <nbata1997@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-bugbear = "^22.3.23"
flake8-import-order = "^0.18.1"
flake8-builtins = "^1.5.3"
flake8-docstrings = "^1.6.0"
flake8-print = "^4.0.0"
isort = "^5.10.1"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
pytest-env = "^0.6.2"
pytest-pythonpath = "^0.7.3"

[tool.black]
line-length = 79
target-version = ['py39']
include = '\.py$'
extend-exclude = '''
/(
      \.git
    | \.aws-sam
    | \.history
    | \.venv
)/
'''

[tool.isort]
profile = "black"
line_length = 79
src_paths = ["solutions", "tests"] 

[build-system]
requires = ["poetry-core=1.1.12"]
build-backend = "poetry.core.masonry.api"
